--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
     <string name="splash_logo">logo</string>
 
     //네이버 API(네아로) 관련 코드
-    <string name="naver_client_id">Ps6u6aQD0DWvw8Y7mERB</string>
-    <string name="naver_client_secret">gbnKnK0GYI"</string>
-    <string name="naver_client_name">EVerywhere"</string>
+    <string name="naver_login_client_id">Ps6u6aQD0DWvw8Y7mERB</string>
+    <string name="naver_login_client_secret">gbnKnK0GYI"</string>
+    <string name="naver_login_client_name">EVerywhere"</string>
+    //네이버 지역 검색 관련 코드
+    <string name="naver_search_client_id">OMDAUElxYukmn7Cm598R</string>
+    <string name="naver_search_client_secret">pOtvpBHgOW</string>
 </resources>
